# EO1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml  test.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: release.yml
demo_data/: interleaved_demo.jsonl
demo_data/refcoco/: refcoco.jsonl
eo/: .gitkeep
eo/data/: dataset.py  lerobot_dataset.py  multim_dataset.py  schema.py  transforms.py
eo/model/: configuration_eo1.py  modeling_eo1.py  modeling_qwen2_5_vl.py  processing_eo1.py  processor.py
eo/train/: pipeline_config.py  train_utils.py  trainer.py
experiments/1_demo/: README.md  data-demo.yaml  run.sh  train.sh
experiments/2_libero/: README.md  data-libero.yaml  eval_libero.py  train.sh
experiments/3_simpler/: README.md  data-bridge.yaml  data-fractal.yaml  train_bridge.sh  train_fractal.sh
experiments/3_simpler/simpler_env/: eval_simpler.sh  main_inference.py
experiments/3_simpler/simpler_env/eo/: eo_model.py  geometry.py
experiments/5_widowx/: README.md  eval_widowx.py  requirements.txt  widowx_env.py
experiments/7_franka/: README.md  eval_franka.py  realsense_camera.py  requirements.txt
experiments/8_vllmeval/: README.md  dataset-config.json  run.sh
experiments/8_vllmeval/dataset/: __init__.py  eobench.py  erqa.py  robovqa.py
experiments/8_vllmeval/vlm/: __init__.py  model.py  prompt.py
experiments/9_pretraining/: README.md  data-pretrain-stage1.yaml  launch_pretrain.sh  zero1.json  zero3.json
getting_started/: 1_load_dataset.ipynb  2_train_finetune.ipynb  3_eval_deploy.ipynb  4_advanced_pretrain.ipynb
scripts/: chat_template.json  eval_policy.py  eval_vlm.py  test_vlm.py  train.py
tests/: test_dataset.py  test_vlm.py
tools/: openloop.py  test_hf_model.py
